--- a/angular.json
+++ b/angular.json
@@ -6,5 +6,36 @@
   },
   "newProjectRoot": "projects",
   "projects": {
+    "auto": {
+      "projectType": "library",
+      "root": "projects/auto",
+      "sourceRoot": "projects/auto/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/auto/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/auto/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/auto/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/auto/src/test.ts",
+            "tsConfig": "projects/auto/tsconfig.spec.json",
+            "karmaConfig": "projects/auto/karma.conf.js"
+          }
+        }
+      }
+    }
   }
 }
