--- a/projects/auto/package.json
+++ b/projects/auto/package.json
@@ -6,8 +6,8 @@
       "type": "git"
    },
    "license": "MIT",
-   "keywords": ["Angular", "decorator", "unsubscribe", "auto", "rxjs"],
-   "version": "0.1.0",
+   "keywords": ["Angular", "experimental", "decorator", "composition", "api", "lifecycle", "hooks", "subscribe", "unsubscribe", "auto", "automatic", "observable", "rxjs"],
+   "version": "0.1.1",
    "peerDependencies": {
       "@angular/common": "^14.0.0",
       "@angular/core": "^14.0.0"
